Fix ellipsis on mobile track title (#336)

--- a/packages/web/src/components/track/mobile/TrackTile.module.css
+++ b/packages/web/src/components/track/mobile/TrackTile.module.css
@@ -162,6 +162,7 @@
   min-height: 20px;
   align-items: center;
   position: relative;
+  width: 100%;
 }
 
 .title:active {
